Add existing project files to Git

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GYM PSD</title>
     <link rel="stylesheet" href="css/venobox.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Poppins:ital,wght@0,400;0,500;0,700;0,800;1,600&family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -259,11 +260,263 @@
       </div>
     </div>
   </section>
+  
+  <section id="testi_main1">
+       <div class="header_text text-center">
+        <h2>Testimonial</h2>
+        <img src="images/lathi.png" alt="">
+       </div>
+       <div class="testimonial">
+        <div class="container">
+          <div class="row testi_main">
+       <div class="col-lg-6 testi-item">
+                <div class="row">
+                      <div class="col-lg-2">
+                        <img src="images/tesmonial1.jpg" alt="">
+                      </div>
+                      <div class="col-lg-10">
+                        <h3>Mridul Chakrabarty</h3>
+                        <h4>Gymnast</h4>
+                        <div class="review">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                        </div>
+                      </div>
+                      <div class="col-lg-12">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printertook a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries are not possible.</p>
+                  </div>
+              </div>
+        </div>
+        <div class="col-lg-6 testi-item">
+          <div class="row ">
+                <div class="col-lg-2">
+                  <img src="images/tesmonia2.jpg" alt="">
+                </div>
+                <div class="col-lg-10">
+                  <h3>Mridul Chakrabarty</h3>
+                  <h4>Gymnast</h4>
+                  <div class="review">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printertook a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries are not possible.</p>
+            </div>
+        </div>
+  </div>
+  <div class="col-lg-6 testi-item">
+    <div class="row ">
+          <div class="col-lg-2">
+            <img src="images/tesmonial1.jpg" alt="">
+          </div>
+          <div class="col-lg-10">
+            <h3>Mridul Chakrabarty</h3>
+            <h4>Gymnast</h4>
+            <div class="review">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+          <div class="col-lg-12">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printertook a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries are not possible.</p>
+      </div>
+  </div>
+</div>
+      </div>
+    </div>
+  </div>
+  </section>
+
+  <section id="membership">
+    <div class="container">
+      <div class="header_text text-center">
+        <h2>membership</h2>
+        <img src="images/lathi.png" alt="">
+      </div>
+      <div class="row member_main justify-content-between">
+        <div class="col-lg-4 member_item text-center">
+            <h3>Regular Membership</h3>
+              <div class="inner_image">
+                <h4>$ 10<span>/Month</span></h4>
+              </div>
+              <div class="offers">
+                  <p>Free Tutorials</p>
+                  <p>Aerobik Programmes</p>
+                  <p>Trainer Support</p>
+                  <p>X</p>
+                  <p>X</p>
+              </div>
+              
+              <div class="button"><a href="#">Join Now</a></div>
+          </div>
+
+          <div class="col-lg-4 member_item text-center">
+            <h3>Regular Membership</h3>
+              <div class="inner_image">
+                <h4>$ 10<span>/Month</span></h4>
+              </div>
+              <div class="offers">
+                  <p>Free Tutorials</p>
+                  <p>Aerobik Programmes</p>
+                  <p>Trainer Support</p>
+                  <p>X</p>
+                  <p>X</p>
+              </div>
+              
+              <div class="button"><a href="#">Join Now</a></div>
+          </div>
+
+          <div class="col-lg-4 member_item text-center">
+            <h3>Regular Membership</h3>
+              <div class="inner_image">
+                <h4>$ 10<span>/Month</span></h4>
+              </div>
+              <div class="offers">
+                  <p>Free Tutorials</p>
+                  <p>Aerobik Programmes</p>
+                  <p>Trainer Support</p>
+                  <p>X</p>
+                  <p>X</p>
+              </div>
+              <div class="button"><a href="#">Join Now</a></div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section id="countermain">
+     <div class="container">
+      <div class="row counter_main">
+        <div class="col-lg text-center">
+          <h4><span class="counter">261</span></h4>
+          <p>Cup of tea</p>
+        </div>
+        <div class="col-lg text-center">
+          <h4><span class="counter">518</span></h4>
+          <p>Award wins</p>
+        </div>
+        <div class="col-lg text-center">
+          <h4><span class="counter">999</span></h4>
+          <p>Happy clients</p>
+        </div>
+        <div class="col-lg text-center">
+          <h4><span class="counter">369</span></h4>
+          <p>Course Complete</p>
+        </div>
+        <div class="col-lg text-center">
+          <h4><span class="counter">209</span></h4>
+          <p>Partner Gym</p>
+        </div>
+      </div>
+     </div>
+  </section>
+
+  <section id="classe">
+    <div class="container">
+      <div class="header_text text-center">
+        <h2>Our Classes</h2>
+        <img src="images/lathi.png" alt="">
+      </div>
+      <div class="week">
+        <div class="row text-center ">
+          <div class="col-lg days">
+            <p>Monday</p>
+          </div>
+          <div class="col-lg days">
+            <p>Tuesday</p>
+          </div>
+          <div class="col-lg days">
+            <p>Webnesday</p>
+          </div>
+          <div class="col-lg days">
+            <p>Thurstday</p>
+          </div>
+          <div class="col-lg days">
+            <p>Friday</p>
+          </div>
+          <div class="col-lg days">
+            <p>Saterday</p>
+          </div>
+          <div class="col-lg days">
+            <p>Sunday</p>
+          </div>
+        </div>
+      </div>
+      <div class="yoga_main">
+        <div class="row">
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes1.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes1.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/classes2.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes3.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes5.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes1.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/classes2.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes3.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes4.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+          <div class="col-lg text-center classpart">
+            <h3>Yoga</h3>
+            <img src="images/Classes1.png" alt="">
+            <h3>9:00 AM to 11:00 AM</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 <!-- All JS -->
     <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="js/venobox.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
